cards: explicitly layered sprites

--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -10,8 +10,7 @@
     - 0,0,1,1
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: box
-    layers:
+    layers: # Frontier changed from base state
     - state: black_box
     - state: black_box_open
       map: [ "openLayer" ]
@@ -56,7 +55,8 @@
   - type: CardHand
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: singlecard_down_black
+    layers: # Frontier: changed from base state
+    - state: singlecard_down_black # Frontier
   - type: UserInterface
     interfaces:
       enum.CardUiKey.Key:
@@ -74,7 +74,8 @@
   components:
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: deck_black_full
+    layers: # Frontier: changed from base state
+    - state: deck_black_full # Frontier
   - type: Item
     size: Normal
   - type: CardDeck
@@ -89,8 +90,7 @@
     size: Small
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: box
-    layers:
+    layers: # Frontier changed from base state
     - state: black_box
     - state: black_box_open
       map: [ "openLayer" ]
@@ -107,7 +107,8 @@
   components:
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: deck_black_full
+    layers: # Frontier: changed from base state
+    - state: deck_black_full # Frontier
   - type: CardStack
     content:
     # Clubs
@@ -182,7 +183,8 @@
       collection: cardShove
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: singlecard_down_black
+    layers: # Frontier: changed from base state
+    - singlecard_down_black # Frontier
   - type: Rotatable
   - type: Item
     size: Small
@@ -207,7 +209,8 @@
     name: card-sc-2-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_2_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_2_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -218,7 +221,8 @@
     name: card-sc-3-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_3_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_3_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -229,7 +233,8 @@
     name: card-sc-4-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_4_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_4_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -240,7 +245,8 @@
     name: card-sc-5-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_5_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_5_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -251,7 +257,8 @@
     name: card-sc-6-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_6_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_6_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -262,7 +269,8 @@
     name: card-sc-7-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_7_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_7_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -273,7 +281,8 @@
     name: card-sc-8-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_8_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_8_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -284,7 +293,8 @@
     name: card-sc-9-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_9_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_9_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -295,7 +305,8 @@
     name: card-sc-10-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_10_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_10_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -306,7 +317,8 @@
     name: card-sc-ace-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Ace_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_Ace_of_Clubs_black # Frontier
 
 
 - type: entity
@@ -318,7 +330,8 @@
     name: card-sc-jack-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Jack_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_Jack_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -329,7 +342,8 @@
     name: card-sc-king-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_King_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_King_of_Clubs_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -340,7 +354,8 @@
     name: card-sc-queen-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Queen_of_Clubs_black
+    layers: # Frontier changed from base state
+    - state: sc_Queen_of_Clubs_black # Frontier
 
 
 - type: entity
@@ -352,7 +367,8 @@
     name: card-sc-jack-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Jack_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_Jack_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -363,7 +379,8 @@
     name: card-sc-queen-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Queen_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_Queen_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -374,7 +391,8 @@
     name: card-sc-king-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_King_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_King_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -385,7 +403,8 @@
     name: card-sc-ace-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Ace_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_Ace_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -396,7 +415,8 @@
     name: card-sc-2-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_2_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_2_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -407,7 +427,8 @@
     name: card-sc-3-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_3_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_3_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -418,7 +439,8 @@
     name: card-sc-4-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_4_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_4_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -429,7 +451,8 @@
     name: card-sc-5-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_5_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_5_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -440,7 +463,8 @@
     name: card-sc-6-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_6_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_6_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -451,7 +475,8 @@
     name: card-sc-7-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_7_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_7_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -462,7 +487,8 @@
     name: card-sc-8-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_8_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_8_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -473,7 +499,8 @@
     name: card-sc-9-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_9_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_9_of_Diamonds_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -484,7 +511,8 @@
     name: card-sc-10-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_10_of_Diamonds_black
+    layers: # Frontier changed from base state
+    - state: sc_10_of_Diamonds_black # Frontier
 
 
 - type: entity
@@ -496,7 +524,8 @@
     name: card-sc-2-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_2_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_2_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -507,7 +536,8 @@
     name: card-sc-3-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_3_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_3_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -518,7 +548,8 @@
     name: card-sc-4-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_4_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_4_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -529,7 +560,8 @@
     name: card-sc-5-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_5_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_5_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -540,7 +572,8 @@
     name: card-sc-6-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_6_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_6_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -551,7 +584,8 @@
     name: card-sc-7-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_7_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_7_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -562,7 +596,8 @@
     name: card-sc-8-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_8_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_8_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -573,7 +608,8 @@
     name: card-sc-9-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_9_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_9_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -584,7 +620,8 @@
     name: card-sc-10-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_10_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_10_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -595,7 +632,8 @@
     name: card-sc-king-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_King_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_King_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -606,7 +644,8 @@
     name: card-sc-queen-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Queen_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_Queen_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -617,7 +656,8 @@
     name: card-sc-jack-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Jack_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_Jack_of_Hearts_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -628,7 +668,8 @@
     name: card-sc-ace-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Ace_of_Hearts_black
+    layers: # Frontier changed from base state
+    - state: sc_Ace_of_Hearts_black # Frontier
 
 
 - type: entity
@@ -640,7 +681,8 @@
     name: card-sc-2-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_2_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_2_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -651,7 +693,8 @@
     name: card-sc-3-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_3_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_3_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -662,7 +705,8 @@
     name: card-sc-4-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_4_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_4_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -673,7 +717,8 @@
     name: card-sc-5-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_5_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_5_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -684,7 +729,8 @@
     name: card-sc-6-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_6_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_6_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -695,7 +741,8 @@
     name: card-sc-7-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_7_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_7_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -706,7 +753,8 @@
     name: card-sc-8-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_8_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_8_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -717,7 +765,8 @@
     name: card-sc-9-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_9_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_9_of_Spades_black # Frontier
 
 
 - type: entity
@@ -729,7 +778,8 @@
     name: card-sc-10-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_10_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_10_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -740,7 +790,8 @@
     name: card-sc-king-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_King_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_King_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -751,7 +802,8 @@
     name: card-sc-queen-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Queen_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_Queen_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -762,7 +814,8 @@
     name: card-sc-jack-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Jack_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_Jack_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -773,7 +826,8 @@
     name: card-sc-ace-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: sc_Ace_of_Spades_black
+    layers: # Frontier changed from base state
+    - state: sc_Ace_of_Spades_black # Frontier
 
 - type: entity
   parent: CardBase
@@ -784,6 +838,7 @@
     name: card-sc-joker-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: black_joker
+    layers: # Frontier changed from base state
+    - state: black_joker # Frontier
 
-# endregion Black Deck
+# endregion Black Cards
