Try setting cvars up for another game preset

--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -184,7 +184,7 @@
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
     layers: # Frontier: changed from base state
-    - singlecard_down_black # Frontier
+    - state: singlecard_down_black # Frontier
   - type: Rotatable
   - type: Item
     size: Small
