--- a/Resources/IgnoredPrototypes/ignoredPrototypes.yml
+++ b/Resources/IgnoredPrototypes/ignoredPrototypes.yml
@@ -9,3 +9,4 @@
  - /Prototypes/GameRules/events.yml # Frontier - Fuck this file
  - /Prototypes/Procedural/Themes/vgroidinterior.yml
  - /Prototypes/Procedural/vgroid.yml
+ - /Maps/Dungeon/vgroidinterior.yml
