--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -10,7 +10,7 @@
     - 0,0,1,1
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
+    layers:
     - state: black_box
     - state: black_box_open
       map: [ "openLayer" ]
@@ -38,7 +38,6 @@
   abstract: true
   components:
   - type: Item
-    sprite: EstacaoPirata/Objects/Misc/cards.rsi # Frontier
     size: Small
   - type: CardStack
   - type: ContainerContainer # Frontier
@@ -55,8 +54,7 @@
   - type: CardHand
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier: changed from base state
-    - state: singlecard_down_black # Frontier
+    state: singlecard_down_black
   - type: UserInterface
     interfaces:
       enum.CardUiKey.Key:
@@ -74,8 +72,7 @@
   components:
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier: changed from base state
-    - state: deck_black_full # Frontier
+    state: deck_black_full
   - type: Item
     size: Normal
   - type: CardDeck
@@ -90,7 +87,7 @@
     size: Small
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
+    layers:
     - state: black_box
     - state: black_box_open
       map: [ "openLayer" ]
@@ -183,8 +180,7 @@
       collection: cardShove
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier: changed from base state
-    - state: singlecard_down_black # Frontier
+    state: singlecard_down_black
   - type: Rotatable
   - type: Item
     size: Small
@@ -209,8 +205,7 @@
     name: card-sc-2-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_2_of_Clubs_black # Frontier
+    state: sc_2_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -221,8 +216,7 @@
     name: card-sc-3-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_3_of_Clubs_black # Frontier
+    state: sc_3_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -233,8 +227,7 @@
     name: card-sc-4-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_4_of_Clubs_black # Frontier
+    state: sc_4_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -245,8 +238,7 @@
     name: card-sc-5-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_5_of_Clubs_black # Frontier
+    state: sc_5_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -257,8 +249,7 @@
     name: card-sc-6-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_6_of_Clubs_black # Frontier
+    state: sc_6_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -269,8 +260,7 @@
     name: card-sc-7-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_7_of_Clubs_black # Frontier
+    state: sc_7_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -281,8 +271,7 @@
     name: card-sc-8-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_8_of_Clubs_black # Frontier
+    state: sc_8_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -293,8 +282,7 @@
     name: card-sc-9-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_9_of_Clubs_black # Frontier
+    state: sc_9_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -305,8 +293,7 @@
     name: card-sc-10-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_10_of_Clubs_black # Frontier
+    state: sc_10_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -317,8 +304,7 @@
     name: card-sc-ace-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Ace_of_Clubs_black # Frontier
+    state: sc_Ace_of_Clubs_black
 
 
 - type: entity
@@ -330,8 +316,7 @@
     name: card-sc-jack-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Jack_of_Clubs_black # Frontier
+    state: sc_Jack_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -342,8 +327,7 @@
     name: card-sc-king-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_King_of_Clubs_black # Frontier
+    state: sc_King_of_Clubs_black
 
 - type: entity
   parent: CardBase
@@ -354,8 +338,7 @@
     name: card-sc-queen-clubs-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Queen_of_Clubs_black # Frontier
+    state: sc_Queen_of_Clubs_black
 
 
 - type: entity
@@ -367,8 +350,7 @@
     name: card-sc-jack-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Jack_of_Diamonds_black # Frontier
+    state: sc_Jack_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -379,8 +361,7 @@
     name: card-sc-queen-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Queen_of_Diamonds_black # Frontier
+    state: sc_Queen_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -391,8 +372,7 @@
     name: card-sc-king-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_King_of_Diamonds_black # Frontier
+    state: sc_King_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -403,8 +383,7 @@
     name: card-sc-ace-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Ace_of_Diamonds_black # Frontier
+    state: sc_Ace_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -415,8 +394,7 @@
     name: card-sc-2-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_2_of_Diamonds_black # Frontier
+    state: sc_2_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -427,8 +405,7 @@
     name: card-sc-3-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_3_of_Diamonds_black # Frontier
+    state: sc_3_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -439,8 +416,7 @@
     name: card-sc-4-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_4_of_Diamonds_black # Frontier
+    state: sc_4_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -451,8 +427,7 @@
     name: card-sc-5-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_5_of_Diamonds_black # Frontier
+    state: sc_5_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -463,8 +438,7 @@
     name: card-sc-6-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_6_of_Diamonds_black # Frontier
+    state: sc_6_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -475,8 +449,7 @@
     name: card-sc-7-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_7_of_Diamonds_black # Frontier
+    state: sc_7_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -487,8 +460,7 @@
     name: card-sc-8-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_8_of_Diamonds_black # Frontier
+    state: sc_8_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -499,8 +471,7 @@
     name: card-sc-9-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_9_of_Diamonds_black # Frontier
+    state: sc_9_of_Diamonds_black
 
 - type: entity
   parent: CardBase
@@ -511,8 +482,7 @@
     name: card-sc-10-diamonds-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_10_of_Diamonds_black # Frontier
+    state: sc_10_of_Diamonds_black
 
 
 - type: entity
@@ -524,8 +494,7 @@
     name: card-sc-2-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_2_of_Hearts_black # Frontier
+    state: sc_2_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -536,8 +505,7 @@
     name: card-sc-3-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_3_of_Hearts_black # Frontier
+    state: sc_3_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -548,8 +516,7 @@
     name: card-sc-4-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_4_of_Hearts_black # Frontier
+    state: sc_4_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -560,8 +527,7 @@
     name: card-sc-5-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_5_of_Hearts_black # Frontier
+    state: sc_5_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -572,8 +538,7 @@
     name: card-sc-6-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_6_of_Hearts_black # Frontier
+    state: sc_6_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -584,8 +549,7 @@
     name: card-sc-7-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_7_of_Hearts_black # Frontier
+    state: sc_7_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -596,8 +560,7 @@
     name: card-sc-8-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_8_of_Hearts_black # Frontier
+    state: sc_8_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -608,8 +571,7 @@
     name: card-sc-9-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_9_of_Hearts_black # Frontier
+    state: sc_9_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -620,8 +582,7 @@
     name: card-sc-10-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_10_of_Hearts_black # Frontier
+    state: sc_10_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -632,8 +593,7 @@
     name: card-sc-king-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_King_of_Hearts_black # Frontier
+    state: sc_King_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -644,8 +604,7 @@
     name: card-sc-queen-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Queen_of_Hearts_black # Frontier
+    state: sc_Queen_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -656,8 +615,7 @@
     name: card-sc-jack-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Jack_of_Hearts_black # Frontier
+    state: sc_Jack_of_Hearts_black
 
 - type: entity
   parent: CardBase
@@ -668,8 +626,7 @@
     name: card-sc-ace-hearts-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Ace_of_Hearts_black # Frontier
+    state: sc_Ace_of_Hearts_black
 
 
 - type: entity
@@ -681,8 +638,7 @@
     name: card-sc-2-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_2_of_Spades_black # Frontier
+    state: sc_2_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -693,8 +649,7 @@
     name: card-sc-3-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_3_of_Spades_black # Frontier
+    state: sc_3_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -705,8 +660,7 @@
     name: card-sc-4-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_4_of_Spades_black # Frontier
+    state: sc_4_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -717,8 +671,7 @@
     name: card-sc-5-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_5_of_Spades_black # Frontier
+    state: sc_5_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -729,8 +682,7 @@
     name: card-sc-6-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_6_of_Spades_black # Frontier
+    state: sc_6_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -741,8 +693,7 @@
     name: card-sc-7-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_7_of_Spades_black # Frontier
+    state: sc_7_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -753,8 +704,7 @@
     name: card-sc-8-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_8_of_Spades_black # Frontier
+    state: sc_8_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -765,8 +715,7 @@
     name: card-sc-9-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_9_of_Spades_black # Frontier
+    state: sc_9_of_Spades_black
 
 
 - type: entity
@@ -778,8 +727,7 @@
     name: card-sc-10-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_10_of_Spades_black # Frontier
+    state: sc_10_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -790,8 +738,7 @@
     name: card-sc-king-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_King_of_Spades_black # Frontier
+    state: sc_King_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -802,8 +749,7 @@
     name: card-sc-queen-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Queen_of_Spades_black # Frontier
+    state: sc_Queen_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -814,8 +760,7 @@
     name: card-sc-jack-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Jack_of_Spades_black # Frontier
+    state: sc_Jack_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -826,8 +771,7 @@
     name: card-sc-ace-spades-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: sc_Ace_of_Spades_black # Frontier
+    state: sc_Ace_of_Spades_black
 
 - type: entity
   parent: CardBase
@@ -838,7 +782,6 @@
     name: card-sc-joker-black
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier changed from base state
-    - state: black_joker # Frontier
+    state: black_joker
 
 # endregion Black Cards
