--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -104,8 +104,7 @@
   components:
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    layers: # Frontier: changed from base state
-    - state: deck_black_full # Frontier
+    state: deck_black_full
   - type: CardStack
     content:
     # Clubs
