reclaimer turned into lathe

--- a/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
@@ -67,3 +67,170 @@
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     Paper: 100
+
+# Scrap ore
+
+- type: latheRecipe
+  id: ScrapPartRodMetal1
+  result: PartRodMetal1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 250
+
+- type: latheRecipe
+  id: ScrapPartRodMetal30
+  result: PartRodMetal
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 7500
+
+- type: latheRecipe
+  id: ScrapSheetSteel1
+  result: SheetSteel1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 500
+
+- type: latheRecipe
+  id: ScrapSheetSteel30
+  result: SheetSteel
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 15000
+
+- type: latheRecipe
+  id: ScrapSheetGlass1
+  result: SheetGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 750
+
+- type: latheRecipe
+  id: ScrapSheetGlass30
+  result: SheetGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 22500
+
+- type: latheRecipe
+  id: ScrapSheetRGlass1
+  result: SheetRGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1000
+
+- type: latheRecipe
+  id: ScrapSheetRGlass30
+  result: SheetRGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 30000
+
+- type: latheRecipe
+  id: ScrapSheetPlasteel1
+  result: SheetPlasteel1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1000
+
+- type: latheRecipe
+  id: ScrapSheetPlasteel30
+  result: SheetPlasteel
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 30000
+
+- type: latheRecipe
+  id: ScrapSheetPlastic1
+  result: SheetPlastic1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1000
+
+- type: latheRecipe
+  id: ScrapSheetPlastic30
+  result: SheetPlastic
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 30000
+
+- type: latheRecipe
+  id: ScrapSheetPlasma1
+  result: SheetPlasma1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1500
+
+- type: latheRecipe
+  id: ScrapSheetPlasma30
+  result: SheetPlasma
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 45000
+
+- type: latheRecipe
+  id: ScrapSheetUranium1
+  result: SheetUranium1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1500
+
+- type: latheRecipe
+  id: ScrapSheetUranium30
+  result: SheetUranium
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 45000
+
+- type: latheRecipe
+  id: ScrapIngotSilver1
+  result: IngotSilver1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 3000
+
+- type: latheRecipe
+  id: ScrapIngotSilver30
+  result: IngotSilver
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 60000
+
+- type: latheRecipe
+  id: ScrapIngotGold1
+  result: IngotGold1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 4500
+
+- type: latheRecipe
+  id: ScrapIngotGold30
+  result: IngotGold
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 75000
+
+- type: latheRecipe
+  id: ScrapMaterialBananium1
+  result: MaterialBananium1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 4500
+
+- type: latheRecipe
+  id: ScrapMaterialBananium30
+  result: MaterialBananium
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 75000
