--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -1,5 +1,5 @@
 - type: entity
-  parent: [ BaseMachinePowered, ConstructibleMachine ]
+  parent: [ BaseLatheLube ]
   id: MaterialReclaimer
   name: material reclaimer
   description: Cannot reclaim immaterial things, like motivation.
@@ -66,7 +66,7 @@
       components:
       - PhysicalComposition
       - SpaceGarbage
-      - Log # Frontier
+      - Log
       - Cartridge # PDA app cartriges
       tags:
       - Trash
@@ -92,8 +92,6 @@
         loop: true
     useOldSolutionLogic: true
     solutionContainerId: output
-  - type: MaterialStorage
-    insertOnInteract: false
   - type: ContainerContainer
     containers:
       active-material-reclaimer-container: !type:Container
@@ -102,15 +100,48 @@
   - type: SolutionContainerManager
     solutions:
       output:
-        maxVol: 1000 # Frontier 100<1000
+        maxVol: 1000
   - type: DrainableSolution
     solution: output
   - type: ExaminableSolution
     solution: output
   - type: StaticPrice
     price: 500
-  - type: ApcPowerReceiver # Frontier
+  - type: ApcPowerReceiver
     powerLoad: 500 # Allows us to not use the 1000 baseline
-  - type: MaterialReclaimerMagnetPickup # Frontier
+  - type: MaterialReclaimerMagnetPickup
     range: 0.50 # 0.3<0.50
     magnetEnabled: true
+  - type: MaterialStorage
+    #insertOnInteract: false
+    whitelist:
+      tags:
+      - Ore
+  - type: Lathe
+    idleState: icon
+    runningState: gear-active
+    unlitIdleState: unlit
+    unlitRunningState: gear-active
+    staticRecipes:
+    #- ScrapPartRodMetal1
+    - ScrapSheetSteel1
+    - ScrapSheetGlass1
+    - ScrapSheetRGlass1
+    - ScrapSheetPlasteel1
+    - ScrapSheetPlastic1
+    - ScrapSheetPlasma1
+    - ScrapSheetUranium1
+    - ScrapIngotSilver1
+    - ScrapIngotGold1
+    - ScrapMaterialBananium1
+    #- ScrapPartRodMetal30
+    - ScrapSheetSteel30
+    - ScrapSheetGlass30
+    - ScrapSheetRGlass30
+    - ScrapSheetPlasteel30
+    - ScrapSheetPlastic30
+    - ScrapSheetPlasma30
+    - ScrapSheetUranium30
+    - ScrapIngotSilver30
+    - ScrapIngotGold30
+    - ScrapMaterialBananium30
