rules for scrap conversion

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -126,6 +126,7 @@
     #- ScrapPartRodMetal1
     - ScrapSheetSteel1
     - ScrapSheetGlass1
+    - ScrapSheetBrass1
     - ScrapSheetRGlass1
     - ScrapSheetPlasteel1
     - ScrapSheetPlastic1
@@ -137,6 +138,7 @@
     #- ScrapPartRodMetal30
     - ScrapSheetSteel30
     - ScrapSheetGlass30
+    - ScrapSheetBrass30
     - ScrapSheetRGlass30
     - ScrapSheetPlasteel30
     - ScrapSheetPlastic30
