--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -135,6 +135,13 @@
     - ScrapIngotSilver1
     - ScrapIngotGold1
     - ScrapMaterialBananium1
+    - ScrapMaterialCloth1
+    - ScrapMaterialDurathread1
+    - ScrapSheetUGlass1
+    - ScrapSheetPGlass1
+    - ScrapSheetRUGlass1
+    - ScrapSheetRPGlass1
+    - ScrapSheetClockworkGlass1
     #- ScrapPartRodMetal30
     - ScrapSheetSteel30
     - ScrapSheetGlass30
@@ -147,3 +154,10 @@
     - ScrapIngotSilver30
     - ScrapIngotGold30
     - ScrapMaterialBananium30
+    - ScrapMaterialCloth30
+    - ScrapMaterialDurathread30
+    - ScrapSheetUGlass30
+    - ScrapSheetPGlass30
+    - ScrapSheetRUGlass30
+    - ScrapSheetRPGlass30
+    - ScrapSheetClockworkGlass30
