--- a/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
@@ -251,3 +251,108 @@
   completetime: 2
   materials:
     RawScrap: 195000
+
+- type: latheRecipe
+  id: ScrapMaterialCloth1
+  result: MaterialCloth1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 800
+
+- type: latheRecipe
+  id: ScrapMaterialCloth30
+  result: MaterialCloth
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 24000
+
+- type: latheRecipe
+  id: ScrapMaterialDurathread1
+  result: MaterialDurathread1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 2300
+
+- type: latheRecipe
+  id: ScrapMaterialDurathread30
+  result: MaterialDurathread
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 69000
+
+- type: latheRecipe
+  id: ScrapSheetUGlass1
+  result: SheetUGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 3300
+
+- type: latheRecipe
+  id: ScrapSheetUGlass30
+  result: SheetUGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 99000
+
+- type: latheRecipe
+  id: ScrapSheetPGlass1
+  result: SheetPGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 3300
+
+- type: latheRecipe
+  id: ScrapSheetPGlass30
+  result: SheetPGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 99000
+
+- type: latheRecipe
+  id: ScrapSheetRUGlass1
+  result: SheetRUGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 3700
+
+- type: latheRecipe
+  id: ScrapSheetRUGlass30
+  result: SheetRUGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 111000
+
+- type: latheRecipe
+  id: ScrapSheetRPGlass1
+  result: SheetRPGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 3700
+
+- type: latheRecipe
+  id: ScrapSheetRPGlass30
+  result: SheetRPGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 111000
+
+- type: latheRecipe
+  id: ScrapSheetClockworkGlass1
+  result: SheetClockworkGlass1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 1400
+
+- type: latheRecipe
+  id: ScrapSheetClockworkGlass30
+  result: SheetClockworkGlass
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 42000
