--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1396,7 +1396,7 @@
         - MaterialBananium1
         - MaterialDiamond
         - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
-        - SmeltScrap # Frontier
+        #- SmeltScrap # Frontier
 
 - type: entity
   parent: OreProcessor
