--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -142,6 +142,8 @@
     - ScrapSheetRUGlass1
     - ScrapSheetRPGlass1
     - ScrapSheetClockworkGlass1
+    - ScrapMaterialBluespace1
+    - ScrapMaterialDiamond1
     #- ScrapPartRodMetal30
     - ScrapSheetSteel30
     - ScrapSheetGlass30
@@ -161,3 +163,5 @@
     - ScrapSheetRUGlass30
     - ScrapSheetRPGlass30
     - ScrapSheetClockworkGlass30
+    - ScrapMaterialBluespace30
+    - ScrapMaterialDiamond30
