--- a/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
@@ -356,3 +356,33 @@
   completetime: 2
   materials:
     RawScrap: 42000
+
+- type: latheRecipe
+  id: ScrapMaterialBluespace1
+  result: MaterialBluespace1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 225000
+
+- type: latheRecipe
+  id: ScrapMaterialBluespace30
+  result: MaterialBluespace
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 6750000 # dear god
+
+- type: latheRecipe
+  id: ScrapMaterialDiamond1
+  result: MaterialDiamond1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 300000
+
+- type: latheRecipe
+  id: ScrapMaterialDiamond30
+  result: MaterialDiamond
+  parent: BaseMaterialsNoDiscountRecipe
+  completetime: 2
+  materials:
+    RawScrap: 9000000 # dear god
