--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -10,7 +10,6 @@
     - 0,0,1,1
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: box
     layers:
     - state: black_box
     - state: black_box_open
@@ -39,7 +38,6 @@
   abstract: true
   components:
   - type: Item
-    sprite: EstacaoPirata/Objects/Misc/cards.rsi # Frontier
     size: Small
   - type: CardStack
   - type: ContainerContainer # Frontier
@@ -89,7 +87,6 @@
     size: Small
   - type: Sprite
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
-    state: box
     layers:
     - state: black_box
     - state: black_box_open
@@ -786,4 +783,4 @@
     sprite: EstacaoPirata/Objects/Misc/cards.rsi
     state: black_joker
 
-# endregion Black Deck
+# endregion Black Cards
