--- a/Resources/Prototypes/_NF/Shipyard/apothecary.yml
+++ b/Resources/Prototypes/_NF/Shipyard/apothecary.yml
@@ -12,7 +12,7 @@
   id: Apothecary
   name: FSB Apothecary
   description: A small medical and chemistry support vessel. Deployed by the Far Star Biotech company to provide aid and medical services to the Frontier.
-  price: 35500 # TODO: fix this value, gettings to pass - Whatstone
+  price: 36500 # Appraises at ~34k, 7% margin; TODO: fix this value, gettings to pass - Whatstone
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/apothecary.yml
@@ -28,7 +28,7 @@
   mapName: 'FSB Apothecary'
   mapPath: /Maps/_NF/Shuttles/apothecary.yml
   minPlayers: 0
-  stations: 
+  stations:
     Apothecary:
       stationProto: StandardFrontierVessel
       components:
