--- a/Resources/Prototypes/_NF/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -11,6 +11,7 @@
     - type: Rotatable
     - type: AtmosPipeColor
     - type: AtmosDevice
+      joinSystem: true
     - type: UserInterface
       interfaces:
         enum.GasPressurePumpUiKey.Key:
