Added wallmount recharger

--- a/Resources/Maps/_NF/Shuttles/Nfsd/heimdall.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/heimdall.yml
@@ -1225,7 +1225,7 @@ entities:
       parent: 2
 - proto: GasMixerOnFlipped
   entities:
-  - uid: 1
+  - uid: 113
     components:
     - type: Transform
       rot: 3.141592653589793 rad
@@ -1764,16 +1764,6 @@ entities:
     components:
     - type: Transform
       pos: -0.5,4.5
-      parent: 2
-    - type: FuelGenerator
-      targetPower: 16000
-      on: False
-- proto: PosterLegitDickGumshue
-  entities:
-  - uid: 20
-    components:
-    - type: Transform
-      pos: -1.5,1.5
       parent: 2
 - proto: PosterLegitDoNotQuestion
   entities:
@@ -2515,6 +2505,13 @@ entities:
     components:
     - type: Transform
       pos: -0.5,2.5
+      parent: 2
+- proto: WallWeaponCapacitorRechargerOmnidirectional
+  entities:
+  - uid: 1
+    components:
+    - type: Transform
+      pos: -1.5,1.5
       parent: 2
 - proto: WarpPoint
   entities:
