--- a/Resources/Prototypes/_NF/Shipyard/tyne.yml
+++ b/Resources/Prototypes/_NF/Shipyard/tyne.yml
@@ -7,12 +7,12 @@
 # Discord: Tych0
 
 # Shuttle Notes:
-#
+# Inspired by the Tyne-Class lifeboat: https://en.wikipedia.org/wiki/Tyne-class_lifeboat
 - type: vessel
   id: Tyne
   name: SBB Tyne
   description: A small, agile lifeboat with an exterior deck and survivor cabin for search and rescue operations. 
-  price: 19000 #~5-6% markup as it's a med ship. Grid values at 17372.
+  price: 20000 #~5-6% markup as it's a med ship. Grid values at ~19000.
   category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/tyne.yml
