Mark crossbow shotgun spread as a spawner

--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
@@ -551,7 +551,7 @@
 
 - type: entity
   id: CrossbowBoltShrapnelSpread
-  categories: [ HideSpawnMenu ]
+  categories: [ HideSpawnMenu, Spawner ] # Spawner category - this is intended to create other entities
   components:
   - type: ClusterGrenade
     fillPrototype: PelletShotgun
