Separate Frontier and NFSD banks, sector-wide bank access, revamp the Station ATM UI (#2346)

--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -32107,7 +32107,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 37.5,8.5
       parent: 2173
-- proto: StationAdminBankATM
+- proto: StationAdminBankATMFrontier
   entities:
   - uid: 5749
     components:
