--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -72,6 +72,9 @@
     hideCoords: false # Frontier
     maxIffRange: null # Frontier
   - type: CargoOrderConsole
+    taxAccounts: # Frontier
+      Frontier: 0.25 # Frontier
+      Nfsd: 0.15 # Frontier
   - type: BankClient
   - type: CrewMonitoringConsole
   - type: GeneralStationRecordConsole
