--- a/Resources/Maps/_NF/POI/nfsd.yml
+++ b/Resources/Maps/_NF/POI/nfsd.yml
@@ -14894,7 +14894,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 16.5,15.5
       parent: 1
-- proto: StationAdminBankATM
+- proto: StationAdminBankATMNfsd
   entities:
   - uid: 273
     components:
