--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -109,6 +109,11 @@
     mod: 10 # Frontier
   - type: PotentialDeadDrop # Frontier
     hintText: dead-drop-hint-vendor # Frontier
+  - type: VendingMachine # Frontier
+    pack: "" # Frontier
+    taxAccounts: # Frontier
+      Frontier: 0.25 # Frontier
+      Nfsd: 0.15 # Frontier
 
 - type: entity
   parent: VendingMachine
