--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -114,9 +114,9 @@
     - DoorBumpOpener
   - type: Input
     context: "human"
-  - type: SentienceTarget # sentient PDA = pAI lite
-    flavorKind: station-event-random-sentience-flavor-mechanical
-    weight: 0.001 # 1,000 PDAs = as likely to be picked as 1 regular animal
+#  - type: SentienceTarget # sentient PDA = pAI lite # Frontier
+#    flavorKind: station-event-random-sentience-flavor-mechanical # Frontier
+#    weight: 0.001 # 1,000 PDAs = as likely to be picked as 1 regular animal # Frontier
   - type: BlockMovement
     blockInteraction: false # lets the PDA toggle its own flashlight
   - type: TypingIndicator
