selective docking WIP

--- a/Resources/Prototypes/_NF/Entities/Structures/Piping/Atmospherics/binary.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Piping/Atmospherics/binary.yml
@@ -43,6 +43,7 @@
   - type: Docking
     radarColor: darkcyan
     highlightedRadarColor: cyan
+    highlightedRadarColor: lightcyan
     dockType: Gas
   - type: DockingSignalControl
   - type: DeviceLinkSource
